# qt_template

./: CMakeLists.txt  README.md
src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
